chore(gradle): support Java 16 and beyond